# luminux-code

./: Cargo.toml  README.md  build_errors.txt  build_output.txt
benches/: buffer_benchmarks.rs
crates/luminex-buffer/: Cargo.toml
crates/luminex-buffer/src/: buffer.rs  cursor.rs  history.rs  lib.rs  selection.rs
crates/luminex-core/: Cargo.toml
crates/luminex-core/src/: command.rs  config.rs  document.rs  editor.rs  event.rs  keymap.rs  lib.rs  workspace.rs
crates/luminex-lsp/: Cargo.toml
crates/luminex-lsp/src/: lib.rs
crates/luminex-plugin/: Cargo.toml
crates/luminex-plugin/src/: lib.rs
crates/luminex-syntax/: Cargo.toml
crates/luminex-syntax/queries/: javascript.scm  json.scm  python.scm  rust.scm  toml.scm
crates/luminex-syntax/src/: lib.rs
crates/luminex-ui/: Cargo.toml  compile_error.txt
crates/luminex-ui/src/: app.rs  highlighter.rs  lib.rs  style.rs  theme.rs
crates/luminex-ui/src/app/: file_ops.rs  messages.rs  mod.rs  types.rs  update.rs
crates/luminex-ui/src/app/view/: dialogs.rs  docks.rs  editor.rs  mod.rs  sidebar.rs  terminal.rs
crates/luminex-ui/src/components/: command_palette.rs  editor_view.rs  file_explorer.rs  mod.rs  status_bar.rs  tab_bar.rs
src/: main.rs
