[package]
name = "luminex"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A modern, fast, and beautiful text editor built in Rust"
license = "MIT"
repository = "https://github.com/yourusername/luminex"
keywords = ["editor", "text-editor", "ide", "rust"]
categories = ["text-editors", "development-tools"]

[workspace]
members = [
    "crates/luminex-core",
    "crates/luminex-ui",
    "crates/luminex-buffer",
    "crates/luminex-syntax",
    "crates/luminex-lsp",
    "crates/luminex-plugin",
]

[dependencies]
# Workspace crates
luminex-core = { path = "crates/luminex-core" }
luminex-ui = { path = "crates/luminex-ui" }
luminex-buffer = { path = "crates/luminex-buffer" }
luminex-syntax = { path = "crates/luminex-syntax" }
luminex-lsp = { path = "crates/luminex-lsp" }
luminex-plugin = { path = "crates/luminex-plugin" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Directories
dirs = "5.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.9"

[[bench]]
name = "buffer_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
