[package]
name = "luminex-lsp"
version = "0.1.0"
edition = "2024"
description = "Language Server Protocol client"

[dependencies]
luminex-core = { path = "../luminex-core" }
luminex-buffer = { path = "../luminex-buffer" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# LSP types
lsp-types = "0.97"

# JSON-RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Process management
tokio-process = "0.2"
