[package]
name = "luminex-plugin"
version = "0.1.0"
edition = "2024"
description = "Plugin system for Luminex editor"

[dependencies]
luminex-core = { path = "../luminex-core" }
luminex-buffer = { path = "../luminex-buffer" }

# Plugin loading
libloading = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
