[package]
name = "luminex-syntax"
version = "0.1.0"
edition = "2024"
description = "Syntax highlighting using tree-sitter"

[dependencies]
# Tree-sitter for incremental parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-json = "0.24"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
